--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include *.txt
-recursive-include *.txt
 include *.md
-recursive-include *.md
-include *.rst
-recursive-include *.rst
+include Makefile
+graft flojay
+recursive-include flojay *.c *.h *.py *.txt README *.md BUILDING *.win32 ChangeLog *.cmake *.json *.gold *.sh TODO PKG-INFO *.dxy
